--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -55,6 +55,7 @@
                     </p>
                 </div>
                 <div class="card">
+                {% include "shows_table.html" %}
                     <ul>
                         {% for show in shows %}
                         <li>
