--- a/static/style/detailed-view.css
+++ b/static/style/detailed-view.css
@@ -1,3 +1,24 @@
-.detailed-view .poster {
-    max-width: 200px;
-}
+/*.detailed-view .poster {*/
+    /*max-width: 200px;*/
+/*}*/
+/*.trailer{*/
+    /*max-width: 200px;*/
+/*}*/
+
+/*.video-container {*/
+    /*position: relative;*/
+    /*padding-bottom: 56.25%;*/
+    /*padding-top: 0;*/
+    /*height: 0;*/
+    /*overflow: hidden;*/
+/*}*/
+
+/*.video-container iframe,*/
+/*.video-container object,*/
+/*.video-container embed {*/
+    /*position: absolute;*/
+    /*top: 0;*/
+    /*left: 0;*/
+    /*width: 100%;*/
+    /*height: 100%;*/
+/*}*/
