--- a/static/style/button.css
+++ b/static/style/button.css
@@ -61,7 +61,9 @@ button:disabled:hover{
 }
 
 #shows-pagination-previous,
-#shows-pagination-next {
+#shows-pagination-next,
+#actors-pagination-previous,
+#actors-pagination-next{
     width: 100px;
 }
 
