--- a/static/style/detailed-view.css
+++ b/static/style/detailed-view.css
@@ -1,24 +1,84 @@
-/*.detailed-view .poster {*/
-    /*max-width: 200px;*/
-/*}*/
-/*.trailer{*/
-    /*max-width: 200px;*/
-/*}*/
+.modal-container {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.5);
+    display: none;
+}
 
-/*.video-container {*/
-    /*position: relative;*/
-    /*padding-bottom: 56.25%;*/
-    /*padding-top: 0;*/
-    /*height: 0;*/
-    /*overflow: hidden;*/
-/*}*/
+.visible {
+    display: block;
+    background-color: rgba(0, 0, 0, 0.3)
 
-/*.video-container iframe,*/
-/*.video-container object,*/
-/*.video-container embed {*/
-    /*position: absolute;*/
-    /*top: 0;*/
-    /*left: 0;*/
-    /*width: 100%;*/
-    /*height: 100%;*/
-/*}*/
+}
+.episodes-modal-body {
+    width: 80%;
+    height: 80%;
+    margin: 80px auto auto auto;
+    padding: 30px;
+    text-align: left;
+
+}
+.episodes-modal-message {
+    height: 85%;
+    overflow-y: scroll;
+    padding: 30px;
+}
+
+.episodes-modal-close {
+    float: right;
+    font-weight: bolder;
+    font-size: 20px;
+}
+.episodes-modal-title {
+    font-size: 20px;
+    letter-spacing: 2px;
+}
+
+
+.info-modal-container {
+    text-align: center;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.3);
+}
+
+
+.info-modal-body {
+    position: relative;
+    margin: 100px auto auto auto;
+    width: 500px;
+    height: 200px;
+    border: black 1px solid;
+    background-color: white;
+    border-radius: 12px;
+
+}
+.info-modal-title{
+    font-family: 'Maven Pro', sans-serif;
+    font-size: 22px;
+    padding: 10px;
+    background-color: #c2cfde;
+    border-radius: 12px 12px 0 0;
+}
+.info-modal-close {
+    border: none;
+    background-color: #c2cfde;
+    float: right;
+    font-weight: bolder;
+}
+
+.info-modal-message {
+    font-size: 26px;
+    padding: 10px;
+}
+
+.hidden {
+    display: none;
+    background-color: rgba(255, 255, 255, 0.5)
+}
