--- a/static/style/utils.css
+++ b/static/style/utils.css
@@ -22,4 +22,16 @@
 }
 .line {
     margin: 30px 0;
+    border: gray 1px solid;
+}
+.big-letters {
+    font-size: 24px;
+    font-weight: bolder;
+    letter-spacing: 2px;
+}
+.justify {
+    text-align: justify;
+    text-indent: 30px;
+    line-height: 26px;
+
 }
