--- a/templates/one_show.html
+++ b/templates/one_show.html
@@ -17,7 +17,7 @@
                 <p class="small grayed">{{ one_show['runtime'] }} min.<span
                         class="separator">|</span> {{ one_show['genres'] if one_show['genres'] else 'genre unknown' }}
                     <span
-                            class="separator">|</span> {{ one_show['year'] | int }}</p>
+                            class="separator">|</span> {{ one_show['year'] }}</p>
                 <p>{{ one_show['overview'] }}</p>
                 {% if actors %}
                     <div>
