--- a/templates/index.html
+++ b/templates/index.html
@@ -48,6 +48,10 @@
             crossorigin="anonymous"></script>
     <script src="{{ url_for('static', filename='script/actors.js') }}" type="module" defer
             crossorigin="anonymous"></script>
+    <script src="{{ url_for('static', filename='script/add_actor.js') }}" type="module" defer
+            crossorigin="anonymous"></script>
+    <script src="{{ url_for('static', filename='script/genres.js') }}" type="module" defer
+            crossorigin="anonymous"></script>
 
 
 </head>
@@ -83,6 +87,8 @@
         {% endblock %}
     </section>
 <div class="info-modal-container hidden" id="small-modal"></div>
+<div id="actor-modal-container" class="modal-container"></div>
+
     <footer>
         Copyright, bla-bla
     </footer>
