updated navigation bar

--- a/templates/navigation_bar.html
+++ b/templates/navigation_bar.html
@@ -4,6 +4,7 @@
             <li class="title"><a href="{{ url_for('index') }}">MAIN PAGE</a></li>
             <li class="title"><a href="{{ url_for('top_actors') }}">ACTORS</a></li>
             <li class="title" id="new-actor"><a href="#">ADD NEW ACTOR</a></li>
+            <li class="title"><a href="{{ url_for('show_genres') }}">SEARCH BY GENRE</a></li>
         </ul>
     </nav>
 </div>
