added scripts, included nav bar, added block

--- a/templates/index.html
+++ b/templates/index.html
@@ -25,9 +25,18 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style/form.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='style/grid.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='style/utils.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style/navigation_bar.css') }}">
 
     <!-- page specific styling -->
     <link rel="stylesheet" href="{{ url_for('static', filename='style/detailed-view.css') }}">
+
+
+    <script src="{{ url_for('static', filename='scripts/main.js') }}" type="module" defer
+            crossorigin="anonymous"></script>
+    <script src="{{ url_for('static', filename='scripts/communication.js') }}" type="module" defer
+            crossorigin="anonymous"></script>
+    <script src="{{ url_for('static', filename='scripts/genres.js') }}" type="module" defer
+            crossorigin="anonymous"></script>
 
 </head>
 
@@ -42,7 +51,9 @@
             <button type="button" id="bt_register">Register</button>
             <button type="button" id="bt_login">Login</button>
         </div>
+
     </header>
+    {% include 'navigation_bar.html' %}
     <section>
         <h1 class="title text-center">Welcome page</h1>
         <div class="card">
@@ -55,15 +66,11 @@
                 navigation.
             </p>
         </div>
-        <div class="card">
-            <ul>
-                {% for show in shows %}
-                    <li>
-                        <a href="{{ '/tv-show/' + (show['id'] | string) }}">{{ show['title'] }}</a>
-                    </li>
-                {% endfor %}
-            </ul>
-        </div>
+        {% block content %}
+
+        {% endblock %}
+
+
     </section>
     <footer>
         Copyright, bla-bla
