--- a/static/style/navigation_bar.css
+++ b/static/style/navigation_bar.css
@@ -1,4 +1,4 @@
-ul {
+nav ul {
     list-style-type: none;
     margin: 0;
     padding: 0 30px 0 30px;
@@ -9,11 +9,11 @@ ul {
     letter-spacing: 2px;
 }
 
-li {
+nav li {
     float: left;
 }
 
-li a {
+nav li a {
     display: block;
     color: white;
     text-align: center;
@@ -21,6 +21,6 @@ li a {
     text-decoration: none;
 }
 
-li a:hover {
+nav li a:hover {
     text-decoration: none;
 }
