--- a/templates/index.html
+++ b/templates/index.html
@@ -67,10 +67,16 @@
             </p>
         </div>
         {% block content %}
-
         {% endblock %}
-
-
+        <div class="card">
+                        <ul>
+                            {% for show in shows %}
+                                <li>
+                                    <a href="{{ '/tv-show/' + (show['id'] | string) }}">{{ show['title'] }}</a>
+                                </li>
+                            {% endfor %}
+                        </ul>
+        </div>
     </section>
     <footer>
         Copyright, bla-bla
